--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,8 +8,7 @@ html {
 
 .map {
   width: 100%;
-  height: 48vh;
-  border-bottom: 1px solid black;
+  height: 49%;
 }
 
 //@TODO: define in global style
